--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/index.js",
+    "dev": "npx tsx --watch src/index.ts",
+    "test": "npx vitest",
+    "test:dev": "npx vitest --watch=false --reporter=verbose",
+    "coverage": "npx vitest run --coverage --watch=false --reporter=verbose"
   },
   "keywords": [],
   "author": "",
@@ -11,8 +15,10 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^20.14.2",
+    "@vitest/coverage-v8": "^1.6.0",
     "prisma": "^5.15.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.15.6",
     "typescript": "^5.4.5",
     "vitest": "^1.6.0"
   },
