--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,16 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
     "@types/node": "^20.14.2",
     "@vitest/coverage-v8": "^1.6.0",
+    "eslint": "^9.5.0",
+    "globals": "^15.6.0",
     "prisma": "^5.15.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.15.6",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^7.13.1",
     "vitest": "^1.6.0"
   },
   "dependencies": {
