--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "tsx": "^4.15.6",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.1",
-    "vitest": "^1.6.0"
+    "vitest": "^1.6.0",
+    "vitest-mock-extended": "^1.3.1"
   },
   "dependencies": {
     "@prisma/client": "^5.15.0"
