--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@eslint/js": "^9.5.0",
     "@types/node": "^20.14.2",
     "@vitest/coverage-v8": "^1.6.0",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^9.5.0",
     "globals": "^15.6.0",
     "prisma": "^5.15.0",
@@ -28,6 +29,7 @@
     "vitest-mock-extended": "^1.3.1"
   },
   "dependencies": {
-    "@prisma/client": "^5.15.0"
+    "@prisma/client": "^5.15.0",
+    "dotenv": "^16.4.5"
   }
 }
