--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.5.0",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.2",
     "@vitest/coverage-v8": "^1.6.0",
     "dotenv-cli": "^7.4.2",
@@ -30,6 +32,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.15.0",
-    "dotenv": "^16.4.5"
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0"
   }
 }
