--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.2",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@vitest/coverage-v8": "^1.6.0",
     "dotenv-cli": "^7.4.2",
     "eslint": "^9.5.0",
