--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "test": "npx vitest",
     "test:dev": "npx vitest --watch=false --reporter=verbose",
     "coverage": "npx vitest run --coverage --watch=false --reporter=verbose",
-    "migrate":"npx prisma migrate deploy"
+    "migrate":"npx prisma migrate deploy",
+    "start:db":"cd .. && docker compose up -d && sleep 1 && cd ./server && npm run migrate"
   },
   "keywords": [],
   "author": "",
