--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "npx tsx --watch src/index.ts",
-    "test": "npx vitest",
-    "test:dev": "npx vitest --watch=false --reporter=verbose",
+    "test": "npx vitest --watch=false --reporter=verbose --exclude",
+    "test:integration":"cd .. && docker compose --file docker-compose-test.yml up -d --build  && sleep 1 && cd ./server && npx dotenv -e .env.test -- npx vitest --watch=false --reporter=verbose",
     "coverage": "npx vitest run --coverage --watch=false --reporter=verbose",
     "migrate":"npx prisma migrate deploy",
-    "start:db":"cd .. && docker compose up -d && sleep 1 && cd ./server && npm run migrate"
+    "start:db":"cd .. && docker compose --file docker-compose-dev.yml up -d  && sleep 1 && cd ./server && npm run migrate"
   },
   "keywords": [],
   "author": "",
