--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "npx tsx --watch src/index.ts",
-    "test": "npx vitest --watch=false --reporter=verbose --exclude",
-    "test:integration":"cd .. && docker compose --file docker-compose-test.yml up -d --build  && sleep 1 && cd ./server && npx dotenv -e .env.test -- npx vitest --watch=false --reporter=verbose",
+    "test": "npx vitest --watch=false --reporter=verbose --exclude=**/*.e2e.test.ts",
+    "test:integration":"cd .. && docker compose --file docker-compose-test.yml up -d --build  && sleep 1 && cd ./server && npx dotenv -e .env.test -- npx vitest --watch=false --reporter=verbose --exclude=**/unit/*.ts && cd .. && docker compose --file docker-compose-test.yml down",
     "coverage": "npx vitest run --coverage --watch=false --reporter=verbose",
     "migrate":"npx prisma migrate deploy",
     "start:db":"cd .. && docker compose --file docker-compose-dev.yml up -d  && sleep 1 && cd ./server && npm run migrate"
