--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,10 @@
     "start": "node dist/index.js",
     "dev": "npx tsx --watch src/index.ts",
     "test": "npx vitest --watch=false --reporter=verbose --exclude=**/*.e2e.test.ts",
-    "test:integration":"chmod +x ./scripts/run-integration-tests.sh && ./scripts/run-integration-tests.sh",
+    "test:integration": "chmod +x ./scripts/run-integration-tests.sh && ./scripts/run-integration-tests.sh",
     "coverage": "npx vitest run --coverage --watch=false --reporter=verbose",
-    "migrate":"npx prisma migrate deploy",
-    "start:db":"cd .. && docker compose --file docker-compose-dev.yml up -d  && sleep 1 && cd ./server && npm run migrate"
+    "migrate": "npx prisma migrate deploy",
+    "start:db": "cd .. && docker compose --file docker-compose-dev.yml up -d  && sleep 1 && cd ./server && npm run migrate"
   },
   "keywords": [],
   "author": "",
@@ -17,16 +17,18 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.5.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.2",
-    "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.6",
+    "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^1.6.0",
     "dotenv-cli": "^7.4.2",
     "eslint": "^9.5.0",
     "globals": "^15.6.0",
     "prisma": "^5.15.0",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.15.6",
     "typescript": "^5.4.5",
