--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@vitest/coverage-v8": "^1.6.0",
     "dotenv-cli": "^7.4.2",
     "globals": "^15.6.0",
+    "prettier": "3.3.2",
     "prisma": "^5.15.0",
     "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
