--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node dist/index.js",
     "dev": "npx tsx --watch src/index.ts",
@@ -11,14 +12,17 @@
     "coverage:integration": "chmod +x ./scripts/run-integration-coverage.sh && ./scripts/run-integration-coverage.sh",
     "migrate": "npx prisma migrate deploy",
     "start:db": "cd .. && docker compose --file docker-compose-dev.yml up -d  && sleep 2 && cd ./server && npm run migrate",
-    "format":"npx prettier ./src --write && npx prettier ./tests --write"
+    "format": "npx prettier ./src --write && npx prettier ./tests --write",
+    "lint": "npx eslint ./src --fix && npx eslint ./tests --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.6.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
@@ -27,13 +31,17 @@
     "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^1.6.0",
     "dotenv-cli": "^7.4.2",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "globals": "^15.6.0",
     "prettier": "3.3.2",
+    "prettier-plugin-organize-imports": "^4.0.0",
     "prisma": "^5.15.0",
     "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.15.6",
-    "typescript": "^5.4.5",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^7.15.0",
     "vitest": "^1.6.0",
     "vitest-mock-extended": "^1.3.1"
   },
