--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,14 @@
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
     "@mui/material-nextjs": "^5.15.11",
+    "@tanstack/react-query": "^5.51.1",
     "firebase": "^10.12.3",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.51.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
