--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,6 +1,4 @@
 {
-  "extends": ["next/babel","next/core-web-vitals"],
-  "plugins": [
-    "eslint-plugin-query"
-  ]
+  "extends": ["next/core-web-vitals"],
+  "plugins": ["@tanstack/query", "prettier-plugin-organize-imports"]
 }
