--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier:fix": "prettier --write ."
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
@@ -28,6 +29,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "prettier": "^3.3.2",
+    "prettier-plugin-organize-imports": "^4.0.0",
     "typescript": "^5"
   }
 }
