login form working

--- a/server/.env.example
+++ b/server/.env.example
@@ -3,5 +3,4 @@ PORT=3000
 NODE_ENV=development
 DATABASE_URL=postgresql://prisma:prisma@localhost:5433/tests?schema=public
 JWT_SECRET=secret
-
-
+CLIENT_URL=http://localhost:3000
