--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.21",
     "@mui/material-nextjs": "^5.15.11",
     "@tanstack/react-query": "^5.51.1",
+    "dayjs": "^1.11.12",
     "firebase": "^10.12.3",
     "next": "14.2.4",
     "react": "^18",
