--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
     "@mui/material-nextjs": "^5.15.11",
+    "@mui/x-date-pickers": "^7.11.0",
     "@tanstack/react-query": "^5.51.1",
     "dayjs": "^1.11.12",
     "firebase": "^10.12.3",
